...

function newRuleHeaderItems(
  formRef: MutableRefObject<TransactionFormHandle | null>,
): NativeStackHeaderItem[] {
  return [
    {
      label: "save",
      type: "button",
      onPress: () => formRef.current?.submit(),
      icon: { type: "sfSymbol", name: "checkmark" },
    },
  ];
}
...
